<resources>
    <string name="app_name">My Application</string>
    <string name="editrate">编辑汇率</string>
    <string name="text">火箭队</string>
    <string name="save">save</string>
    <string name="text2">湖人队</string>
    <string name="score">0</string>
    <string name="three">+3 POINTS</string>
    <string name="two">+2 POINTS</string>
    <string name="one">+1 POINT</string>
    <string name="reset">reset</string>
    <string name="dollor">美元$</string>
    <string name="Europe">欧元€</string>
    <string name="Japan">日元￥</string>
    <string name="consult">对应目标货币</string>
    <string name="putin">请输入内容</string>
    <string name="首页">首页</string>
    <string name="功能">功能</string>
    <string name="设置">设置</string>
    <string name="猫">
        &#8195;&#8195;猫，属于猫科动物，分家猫、野猫，是全世界家庭中较为广泛的宠物。家猫的祖先据推测是起源于古埃及的沙漠猫，波斯的波斯猫，已经被人类驯化了3500年（但未像狗一样完全地被驯化）。\n
        &#8195;&#8195;一般的猫：头圆、颜面部短，前肢五指，后肢四趾，趾端具锐利而弯曲的爪，爪能伸缩。夜行性。\n
        &#8195;&#8195;以伏击的方式猎捕其他动物，大多能攀缘上树。猫的趾底有脂肪质肉垫，以免在行走时发出声响，捕猎时也不会惊跑鼠。行进时爪子处于收缩状态，防止爪被磨钝，在捕鼠和攀岩时会伸出来。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dog">
        &#8195;&#8195;（拉丁文Canis lupus familiaris）属于脊索动物门、脊椎动物亚门、哺乳纲、真兽亚纲、食肉目、裂脚亚目、犬科动物。中文亦称“犬”，狗分布于世界各地。狗与马、牛、羊、猪、鸡并称“六畜”。\n
        &#8195;&#8195;有科学家认为狗是由早期人类从灰狼驯化而来，驯养时间在4万年前~1.5万年前，发展至今日。被称为“人类最忠实的朋友”，现如今是饲养率最高的宠物。其寿命约十多年。\n
        &#8195;&#8195;在中国文化中，狗属于十二生肖之一，在十二生肖中的第11位。
    </string>
    <string name="cow">
         &#8195; &#8195;牛（拉丁学名：Bovine），属牛族，为牛亚科下的一个族。染色体数为56的野牛、60的黄牛和58染色体的大额牛，杂交有可育后代，为哺乳动物，容易发生罗伯逊易位（丝粒融合）改变染色体数降低生育率，草食性，部分种类为家畜（包含家牛、黄牛、水牛和牦牛）。体型粗壮，部分公牛头部长有一对角。牛能帮助人类进行农业生产。
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="赞成">赞成</string>
    <string name="反对">反对</string>
    <string name="弃权">弃权</string>

</resources>
